# FileDownload

./: CMakeLists.txt  README.md
include/: FileDownload.h  downloadAPI.h  resource.h  zlog.h
lib/win/: libcurl.lib
release/ubuntu/: demo  libboost_filesystem.so.1.66.0  libboost_serialization.so.1.66.0  libboost_system.so.1.66.0
src/FileDownload/: CMakeLists.txt  FileDownload.cpp  downloadAPI.cpp  main.cpp  zlog.cpp
src/test/: CMakeLists.txt  main.cpp
